Tests/Applications/R772/Prg/R772.prg
// R772: Cannot use DATE in VOSTRUCT
FUNCTION Start( ) AS VOID
	System.Console.WriteLine("Hello x#!")
RETURN

VOSTRUCT MyStruct
MEMBER n AS INT
MEMBER s AS SYMBOL // ok
MEMBER d AS DATE // error
